K8S-examples/Ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx-example

  rules:

  - http:

      paths:

      - path: /testpath

        pathType: Prefix

        backend:

          service:

            name: test

            port:

              number: 80
